force-app/main/default/objects/Contact/fields/Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Value__c</fullName>
    <label>Account Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>