force-app/main/default/objects/Contact/fields/Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Age__c</fullName>
    <formula>(TODAY()- Birthdate)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>