force-app/main/default/objects/Contact/fields/Eligible_For_Financing__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible For Financing</label>
    <type>Checkbox</type>
</CustomField>