force-app/main/default/objects/Contact/fields/Homeowner__c.field-meta.xml
<CustomField>
    <fullName>Homeowner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner</label>
    <type>Checkbox</type>
</CustomField>