force-app/main/default/objects/Contact/fields/Income_Range__c.field-meta.xml
<CustomField>
    <fullName>Income_Range__c</fullName>
    <label>Income Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$25,000 to $29,999</fullName>
            </value>
            <value>
                <fullName>$30,000 to $34,999</fullName>
            </value>
            <value>
                <fullName>$35,000 to $39,999</fullName>
            </value>
            <value>
                <fullName>$40,000 to $44,999</fullName>
            </value>
            <value>
                <fullName>$45,000 to $49,999</fullName>
            </value>
            <value>
                <fullName>$50,000 to $59,999</fullName>
            </value>
            <value>
                <fullName>$60,000 to $74,999</fullName>
            </value>
            <value>
                <fullName>$75,000 to $99,999</fullName>
            </value>
            <value>
                <fullName>$100,000 to $124,999</fullName>
            </value>
            <value>
                <fullName>$125,000 to $149,999</fullName>
            </value>
            <value>
                <fullName>$150,000 to $199,999</fullName>
            </value>
            <value>
                <fullName>$200,000 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>