force-app/main/default/objects/Contact/fields/Last_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Last_CSAT__c</fullName>
    <label>Most Recent CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>