force-app/main/default/objects/Contact/fields/Likelihood_to_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Upgrade__c</fullName>
    <label>Likelihood to Upgrade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>