force-app/main/default/objects/Contact/fields/Members_Of_Household__c.field-meta.xml
<CustomField>
    <fullName>Members_Of_Household__c</fullName>
    <label>Members Of Household</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>