force-app/main/default/objects/Contact/fields/Service_History__c.field-meta.xml
<CustomField>
    <fullName>Service_History__c</fullName>
    <label>Service History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>