force-app/main/default/objects/Contact/fields/Tenure_Years__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Years__c</fullName>
    <label>Tenure Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>